<resources>
    <string name="app_name">AyuSri</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="doctor_reg">Doctor registration</string>
    <string name="d_name">Name</string>
    <string name="d_email">E-mail</string>
    <string name="enterHospital">Hospital</string>
    <string name="Daddr">Address</string>
    <string name="submit">Submit</string>
    <string name="disbtn">Diseases</string>
    <string name="medicbtn">Medicines</string>
    <string name="locbtn">Location</string>
    <string name="profilebtn">View profile</string>
    <string name="diseases">Diseases</string>
    <string name="Infection_Diseases">Infection Diseases</string>
    <string name="Non_CommunicableDiseases">Non-Communicable Doseases</string>
    <string name="done">DONE</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="Turmeric">TURMERIC</string>
    <string name="buybtn">BUY</string>
    <string name="confirm_btn">CONFIRM</string>
    <string name="addMedi">ADD MEDICINE</string>

    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="term">Terms and Conditions</string>
    <string name="follow">Follow us on</string>

    <string name="Doctors">Doctors</string>
    <string name="Seller">Sellers</string>
    <string name="CusHome">Home</string>
    <string name="Shop">Shop</string>
    <string name="Orders">My Orders</string>
    <string name="Appointments">Appointments</string>
    <string name="MyProfile">My Profile</string>
    <string name="MyUploads">My Uploads</string>

    <string name="DocHome">Doctor Home</string>
    <string name="Requests">Requests</string>

    <string name="SellerHome">Seller Home</string>
    <string name="Products">Products</string>

    <string name="AdminHome">Admin Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="doctorSpecialization">
        <item>Enter Specialization...</item>
        <item>Kayachikitsa (Internal Medicine)</item>
        <item>Shalya Tantra (Surgery)</item>
        <item>Shalakya Tantra
            (Ophthalmology and Otorhinolaryngology)</item>
        <item>Kaumarabhritya (Pediatrics)</item>
        <item>Bhuta Vidya (Psychiatry)</item>
        <item>Rasayana and Vajikarana
            (Rejuvenation and Aphrodisiac Therapy)</item>
        <item>Agada Tantra (Toxicology)</item>
        <item>Panchakarma Therapy</item>
        <item>Jara Chikitsa (Geriatrics)</item>
        <item>Nadi Pariksha (Pulse Diagnosis)</item>
    </string-array>

    <string name="welcomeBack">Welcome Back</string>
    <string name="createAccount">Create Account</string>

    <string name="productName">Product Name</string>
    <string name="productUnitPrice">Unit Price (Rs)</string>
    <string name="productDesc">Product Description</string>
    <string name="sellerName">Seller Name</string>
    <string name="shopName">Shop Name</string>
    <string name="sellerPhone">Seller Phone</string>
    <string name="finishOrder">Finish Order</string>

    <string name="Doctor">Doctor</string>

    <string name="fullName">Full Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="specialization">Specialization</string>

    <string name="contact">Contact number</string>
    <string name="address">Address</string>

    <string name="login">Login</string>

    <string name="newDoctor">New Doctor</string>
    <string name="updateDoctor">Update Doctor</string>
    <string name="newSeller">New Seller</string>
    <string name="updateSeller">Update Seller</string>

    <string name="newProduct">New Product</string>
    <string name="updateProduct">Update Product</string>

    <string name="OrderItem">Order Item</string>

    <string name="register">Register</string>

    <string name="ailment">Ailment</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

    <string name="enterQuantity">Enter Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="title">Title</string>

    <string name="addImage">Add Image</string>

    <string name="patient">Patient</string>

    <string name="customerName">Customer Name</string>
    <string name="customerPhone">Customer Phone</string>
    <string name="customerAdd">Customer Address</string>

    <string name="createAccount2">New User? Create Account</string>

</resources>