<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupback"
    android:textAlignment="center"

    tools:context=".Functions.Common.CreateAccount">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28sp"
        android:layout_marginTop="60sp"
        android:text="@string/createAccount"
        android:textColor="#B3222020"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cname"
        android:layout_width="343sp"
        android:layout_height="50sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="192sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/roundstyle_2"
        android:backgroundTint="@color/welcome"
        android:backgroundTintMode="src_in"
        android:hint="@string/fullName"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingHorizontal="20sp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cpassword1"
        android:layout_width="343sp"
        android:layout_height="50sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/roundstyle_2"
        android:backgroundTint="@color/welcome"
        android:backgroundTintMode="src_in"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingHorizontal="20sp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cphone" />

    <EditText
        android:id="@+id/cemail"
        android:layout_width="343sp"
        android:layout_height="50sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/roundstyle_2"
        android:backgroundTint="@color/welcome"
        android:backgroundTintMode="src_in"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20sp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cname" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="216sp"
        android:layout_height="50sp"
        android:layout_marginStart="34sp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="34sp"
        android:background="@drawable/roundstyle_2"
        android:backgroundTint="@color/button_white"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpassword1"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/cusLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="36sp"
        android:background="@color/transparent_colour"
        android:text="Existing user ? Login here"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbutton" />

    <EditText
        android:id="@+id/cphone"
        android:layout_width="343sp"
        android:layout_height="50sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/roundstyle_2"
        android:backgroundTint="@color/welcome"
        android:backgroundTintMode="src_in"
        android:hint="@string/contact"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:paddingHorizontal="20sp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cemail" />


</androidx.constraintlayout.widget.ConstraintLayout>