<?xml version="1.0" encoding="UTF-8" ?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10sp"
    android:layout_marginVertical="10sp"
    android:layout_marginStart="12sp"
    android:layout_marginEnd="12sp"
    android:backgroundTint="@color/itemCard"
    app:cardCornerRadius="20sp"
    app:cardElevation="8sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp">


            <TextView
                android:id="@+id/orderId"
                android:layout_width="340sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:text="Loading..."
                android:padding="6sp"
                android:background="@drawable/roundstyle_3"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="113sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/productName"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="204sp"
                android:layout_height="32sp"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="71sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/productUnitPrice"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="204sp"
                android:layout_height="32sp"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProducDesc"
                android:layout_width="113sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/productDesc"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvOrderAmount"
                android:layout_width="91sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderAmount"
                android:layout_width="204sp"
                android:layout_height="32sp"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProductSupplierName"
                android:layout_width="113sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/sellerName"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productSellerName"
                android:layout_width="208sp"
                android:layout_height="32sp"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProductSupplierShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/shopName"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productSellerShop"
                android:layout_width="208sp"
                android:layout_height="32sp"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProductSupplierPhone"
                android:layout_width="113sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/sellerPhone"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productSellerPhone"
                android:layout_width="208sp"
                android:layout_height="32sp"
                android:layout_marginStart="150sp"
                android:layout_marginTop="20sp"
                android:text="Loading..."
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnDeleteItem"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="28sp"
                android:layout_marginTop="28sp"
                android:layout_marginEnd="28sp"
                android:layout_marginBottom="28sp"
                android:background="@drawable/delete_button_shape"
                android:backgroundTint="@color/delete"
                android:drawableLeft="@drawable/baseline_delete_24"
                android:padding="10sp"
                android:text="@string/cancelOrder"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>